--- a/frontend/src/components/ReviewFeedItem/ReviewFeedItem.scss
+++ b/frontend/src/components/ReviewFeedItem/ReviewFeedItem.scss
@@ -30,5 +30,6 @@ div.review-feed-item {
 
   .body {
     margin-bottom: 10px;
+    overflow-wrap: break-word;
   }
 }
